--- a/articles/azure-signalr/TOC.yml
+++ b/articles/azure-signalr/TOC.yml
@@ -1,32 +1,55 @@
+items:
 - name: Dokumentation för Azure SignalR Service
   href: index.yml
 - name: Översikt
   items:
-    - name: Om Azure SignalR-tjänsten
-      href: signalr-overview.md
+  - name: Om Azure SignalR-tjänsten
+    href: signalr-overview.md
 - name: Snabbstarter
   items:
-    - name: Skapa ett chattrum
-      href: signalr-quickstart-dotnet-core.md
+  - name: ASP.NET Core
+    href: signalr-quickstart-dotnet-core.md
+  - name: Azure Functions – JavaScript
+    href: signalr-quickstart-azure-functions-javascript.md
+  - name: Azure Functions – C#
+    href: signalr-quickstart-azure-functions-csharp.md
+  - name: REST-API
+    href: signalr-quickstart-rest-api.md
 - name: Självstudier
   items:
-    - name: Autentisera med OAuth
-      href: signalr-authenticate-oauth.md
+  - name: Integrera med ASP.NET Core-identitet
+    href: signalr-authenticate-oauth.md
+  - name: Skapa en serverlös realtidsapp med autentisering
+    href: signalr-authenticate-azure-functions.md
 - name: Exempel
   items:
-    - name: Kodexempel
-      href: 'https://github.com/aspnet/AzureSignalR-samples'
-    - name: Azure CLI
-      href: signalr-cli-samples.md
+  - name: Kodexempel
+    href: https://github.com/aspnet/AzureSignalR-samples
+  - name: Azure CLI
+    href: signalr-cli-samples.md
+- name: Begrepp
+  items:
+  - name: Skala ASP.NET Core SignalR
+    href: signalr-overview-scale-aspnet-core.md
+  - name: Skapa realtidsappar med Azure Functions
+    href: signalr-overview-azure-functions.md
 - name: Resurser
   items:
-    - name: Översikt över SignalR
-      href: 'https://github.com/aspnet/Home/wiki/Roadmap'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/signalr-service/'
-    - name: Videoklipp
-      href: 'https://www.youtube.com/results?search_query=Azure+SignalR+Core'
-    - name: ASP.NET-forum
-      href: 'https://forums.asp.net/search?q=title%3A%28SignalR%20Core%29+OR+body%3A%28SignalR%20Core%29+AND+forumid%3A%281255%29'
-    - name: Twitter
-      href: 'https://twitter.com/SignalR'
+  - name: Översikt över SignalR
+    href: https://github.com/aspnet/Home/wiki/Roadmap
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/signalr-service/
+  - name: Videoklipp
+    href: https://www.youtube.com/results?search_query=Azure+SignalR+Core
+  - name: StackOverflow
+    href: https://stackoverflow.com/search?q=signalr+service
+  - name: ASP.NET-forum
+    href: https://forums.asp.net/1254.aspx
+  - name: Twitter
+    href: https://twitter.com/SignalR
+ms.openlocfilehash: e67749dfa19999658cbb3f63fcd6653d37a1a5f7
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46946365"
