--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -101,6 +101,8 @@ items:
     maintainContext: true
 - name: Resurser
   items:
+  - name: Utveckla dina färdigheter med Microsoft Learn
+    href: /learn/browse/?products=azure-container-registry
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
   - name: Prissättning
@@ -113,9 +115,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-container-registry
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
-ms.openlocfilehash: 67ff62865eb6a14dc619d7ba37310acff0527787
-ms.sourcegitcommit: 3f8f973f095f6f878aa3e2383db0d296365a4b18
+ms.openlocfilehash: 979c2864481b25df6534d9f5858d65d02fe498f0
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/20/2018
-ms.locfileid: "41927700"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46957752"
