--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: 02c604489d8db48a50598f99f6722d555e357f67
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46951074"
 documentType: LandingData
 title: Azure Container Registry-dokumentation
 metadata:
@@ -13,12 +19,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 07/26/2017
   ms.author: carolz
-  ms.openlocfilehash: be041068388fffc0a5333370c76c4d6f59f318ba
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
-  ms.locfileid: "33767962"
 abstract:
   description: Med Azure Container Registry kan du skapa, lagra och hantera avbildningar av alla typer av behållardistributioner. Lär dig hur du använder Azure Container Registry med de här snabbstarterna, självstudierna och exemplen.
 sections:
@@ -49,11 +49,24 @@ sections:
     style: unordered
     className: spaced noBullet
     items:
-    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa behållaravbildningar med ACR Build (förhandsgranskning)</a>
+    - html: <a href="/azure/container-registry/container-registry-tutorial-quick-build">Skapa containeravbildningar med ACR Build (förhandsgranskning)</a>
     - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Geo-replikering för Container Registry</a>
     - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
     - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Container Registry med Azure Kubernetes Service (AKS)</a>
     - html: <a href="/azure/service-fabric/service-fabric-tutorial-create-container-images">Container Registry med Service Fabric</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Skapa och lagra containeravbildningar med Azure Container Registry
+      href: /learn/modules/build-and-store-container-images/
+      image:
+        src: /learn/achievements/build-and-store-container-images.svg
+        href: /learn/modules/build-and-store-container-images/
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-container-registry">Mer interaktiv inlärning...</a>
 - title: Referens
   items:
   - type: list
