--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -15,8 +15,6 @@ items:
       href: create-sql-api-java.md
     - name: Node.js
       href: create-sql-api-nodejs.md
-    - name: Node.js – V2, förhandsversion
-      href: create-sql-api-nodejs-preview.md
     - name: Python
       href: create-sql-api-python.md
     - name: Xamarin
@@ -76,6 +74,17 @@ items:
     href: sql-api-resources.md
   - name: Global distribution
     href: distribute-data-globally.md
+    items:
+    - name: Viktiga fördelar
+      href: distribute-data-globally-benefits.md
+    - name: Aktivera global distribution
+      href: distribute-data-globally-turnkey.md
+    - name: Aktivera flera original
+      href: enable-multi-master.md
+    - name: Flera original med OSS NoSQL-databaser
+      href: multi-master-oss-nosql.md
+    - name: Konfliktlösning
+      href: multi-master-conflict-resolution.md
   - name: Dataflöde
     href: request-units.md
     items:
@@ -87,11 +96,6 @@ items:
     href: indexing-policies.md
   - name: Konsekvensmodeller
     href: consistency-levels.md
-  - name: Flera huvudservrar
-    href: multi-region-writers.md
-    items:
-    - name: Konfiguration med flera huvudservrar
-      href: multi-master-workaround.md
   - name: Ändringsfeed
     href: change-feed.md
   - name: Time to live
@@ -111,6 +115,8 @@ items:
       href: vnet-service-endpoint.md
     - name: Key Vault-stöd
       href: access-secrets-from-keyvault.md
+  - name: Förskottsbetalning för reserverad kapacitet
+    href: cosmos-db-reserved-capacity.md
   - name: Säkerhetskopiering och återställning
     href: online-backup-and-restore.md
   - name: Hög tillgänglighet
@@ -141,8 +147,6 @@ items:
             href: sql-api-async-java-get-started.md
           - name: Node.js
             href: sql-api-nodejs-get-started.md
-          - name: Node.js – V2, förhandsversion
-            href: sql-api-nodejs-get-started-preview.md
         - name: Bygga en webbapp
           items:
           - name: .NET
@@ -151,8 +155,6 @@ items:
             href: sql-api-java-application.md
           - name: Node.js
             href: sql-api-nodejs-application.md
-          - name: Node.js – V2, förhandsversion
-            href: sql-api-nodejs-application-preview.md
           - name: Python
             href: sql-api-python-application.md
           - name: Xamarin
@@ -173,8 +175,6 @@ items:
         href: sql-api-async-java-samples.md
       - name: Node.js-exempel
         href: sql-api-nodejs-samples.md
-      - name: Node.js – V2, exempel på förhandsversion
-        href: sql-api-nodejs-samples-preview.md
       - name: Python-exempel
         href: sql-api-python-samples.md
       - name: PowerShell
@@ -287,12 +287,40 @@ items:
     items:
     - name: Introduktion
       href: cassandra-introduction.md
+    - name: Cassandra-stöd
+      href: cassandra-support.md
     - name: Självstudier
       items:
-      - name: 1 – Skapa konto
-        href: tutorial-develop-cassandra-java.md
-      - name: 2 – Migrera data
+      - name: 1 – Skapa konto och databas
+        href: create-cassandra-api-account-java.md
+      - name: 2 – Läsa in data
+        href: cassandra-api-load-data.md
+      - name: 3 – Frågedata
+        href: cassandra-api-query-data.md
+      - name: 4 – Migrera data
         href: cassandra-import-data.md
+    - name: Cassandra och Spark
+      items:
+      - name: Introduktion
+        href: cassandra-spark-generic.md
+      - name: Ansluta med Databricks
+        href: cassandra-spark-databricks.md
+      - name: Ansluta med HDInsight
+        href: cassandra-spark-hdinsight.md
+      - name: Skapa keyspace och tabell
+        href: cassandra-spark-ddl-ops.md
+      - name: Infoga data
+        href: cassandra-spark-create-ops.md
+      - name: Läsa data
+        href: cassandra-spark-read-ops.md
+      - name: Upserta data
+        href: cassandra-spark-upsert-ops.md
+      - name: Ta bort data
+        href: cassandra-spark-delete-ops.md
+      - name: Sammansättningsåtgärder
+        href: cassandra-spark-aggregation-ops.md
+      - name: Kopiera tabelldata
+        href: cassandra-spark-table-copy-ops.md
   - name: Dokument för tabell-API
     items:
     - name: Introduktion
@@ -438,6 +466,8 @@ items:
       href: bulk-executor-java.md
 - name: Resurser
   items:
+  - name: Utveckla dina färdigheter med Microsoft Learn
+    href: /learn/browse/?products=azure-cosmos-db
   - name: Översiktsblad för frågor
     href: query-cheat-sheet.md
   - name: SQL-spelplan
@@ -460,9 +490,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 2bc1fcfab7399cc52500b832721e7ca7509758fd
-ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
+ms.openlocfilehash: bdb4419b2af399ab28b71e11112e38cfd7a21389
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/17/2018
-ms.locfileid: "45737285"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46956860"
