--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -1,59 +1,106 @@
 items:
-- name: Dokumentation om Azure Data Box
+- name: Dokumentation – Azure Data Box för överföring offline
   href: /azure/databox/
-- name: Översikt
   items:
-  - name: Vad är Data Box Disk?
-    href: data-box-disk-overview.md
-- name: Snabbstarter
-  items:
-  - name: Konfiguration – Azure-portalen
-    href: data-box-disk-quickstart-portal.md
-- name: Självstudier
-  items:
-  - name: 1 – Beställ
-    href: data-box-disk-deploy-ordered.md
-  - name: 2 – Konfigurera
-    href: data-box-disk-deploy-set-up.md
-  - name: 3 – Kopiera data
-    href: data-box-disk-deploy-copy-data.md
-  - name: 4 – Returnera, ladda upp, bekräfta
-    href: data-box-disk-deploy-picked-up.md
-- name: Begrepp
-  items:
-  - name: Granska krav
-    href: data-box-disk-system-requirements.md
-  - name: Förstå begränsningar
-    href: data-box-disk-limits.md
-  - name: Granska säkerhet
-    href: data-box-disk-security.md
-  - name: VANLIGA FRÅGOR OCH SVAR
-    href: data-box-disk-faq.md
-- name: Gör så här för att
-  items:
-  - name: Hantera via Azure Portal
-    href: data-box-portal-ui-admin.md
-  - name: Felsök diskproblem
-    href: data-box-disk-troubleshoot.md
-  - name: Kontakta supporten
-    href: data-box-disk-contact-microsoft-support.md
-- name: Resurser
-  items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=storage
-  - name: Marknadsföring för Azure Data Box
-    href: https://azure.microsoft.com/services/storage/databox/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=databox
-  - name: Videoklipp
-    href: https://azure.microsoft.com/documentation/videos/index/?services=databox
-ms.openlocfilehash: 9194e92e03d53c4045818f2bea629a733c92ac79
-ms.sourcegitcommit: 63613e4c7edf1b1875a2974a29ab2a8ce5d90e3b
+  - name: Data Box
+    items:
+    - name: Översikt
+      items:
+      - name: Vad är Data Box?
+        href: data-box-overview.md
+    - name: Snabbstarter
+      items:
+      - name: Konfiguration – Azure-portalen
+        href: data-box-quickstart-portal.md
+      expanded: true
+    - name: Självstudier
+      items:
+      - name: 1 – Beställ
+        href: data-box-deploy-ordered.md
+      - name: 2 – Konfigurera
+        href: data-box-deploy-set-up.md
+      - name: 3 – Kopiera data
+        href: data-box-deploy-copy-data.md
+      - name: 4 – Returnera, ladda upp, bekräfta
+        href: data-box-deploy-picked-up.md
+    - name: Begrepp
+      items:
+      - name: Läsa riktlinjer för säkerhet
+        href: data-box-safety.md
+      - name: Granska krav
+        href: data-box-system-requirements.md
+      - name: Förstå begränsningar
+        href: data-box-limits.md
+      - name: Granska säkerhet
+        href: data-box-security.md
+      - name: VANLIGA FRÅGOR OCH SVAR
+        href: data-box-faq.md
+    - name: Gör så här för att
+      items:
+      - name: Hantera via Azure Portal
+        href: data-box-portal-admin.md
+      - name: Hantera via lokalt webbgränssnitt
+        href: data-box-local-web-ui-admin.md
+      - name: Kontakta supporten
+        href: data-box-disk-contact-microsoft-support.md
+  - name: Data Box Disk
+    items:
+    - name: Översikt
+      items:
+      - name: Vad är Data Box Disk?
+        href: data-box-disk-overview.md
+    - name: Snabbstarter
+      items:
+      - name: Konfiguration – Azure-portalen
+        href: data-box-disk-quickstart-portal.md
+      expanded: true
+    - name: Självstudier
+      items:
+      - name: 1 – Beställ
+        href: data-box-disk-deploy-ordered.md
+      - name: 2 – Konfigurera
+        href: data-box-disk-deploy-set-up.md
+      - name: 3 – Kopiera data
+        href: data-box-disk-deploy-copy-data.md
+      - name: 4 – Returnera, ladda upp, bekräfta
+        href: data-box-disk-deploy-picked-up.md
+    - name: Begrepp
+      items:
+      - name: Granska krav
+        href: data-box-disk-system-requirements.md
+      - name: Förstå begränsningar
+        href: data-box-disk-limits.md
+      - name: Granska säkerhet
+        href: data-box-disk-security.md
+      - name: VANLIGA FRÅGOR OCH SVAR
+        href: data-box-disk-faq.md
+    - name: Gör så här för att
+      items:
+      - name: Hantera via Azure Portal
+        href: data-box-portal-ui-admin.md
+      - name: Felsök diskproblem
+        href: data-box-disk-troubleshoot.md
+      - name: Kontakta supporten
+        href: data-box-disk-contact-microsoft-support.md
+  - name: Data Box – tung
+    items:
+    - name: Översikt
+      items:
+      - name: Vad är Data Box – tung?
+        href: data-box-heavy-overview.md
+  - name: Resurser
+    items:
+    - name: Azure-översikt
+      href: https://azure.microsoft.com/roadmap/?category=storage
+    - name: Marknadsföring för Azure Data Box
+      href: https://azure.microsoft.com/services/storage/databox/
+    - name: Prissättning
+      href: https://azure.microsoft.com/pricing/details/storage/databox/
+    - name: Tjänstuppdateringar
+      href: https://azure.microsoft.com/updates/?product=databox
+ms.openlocfilehash: 38c047533583eb64a98aa5fa13c1ebefcbc6af94
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/29/2018
-ms.locfileid: "43190206"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46974739"
