--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -42,6 +42,8 @@ items:
     href: expressroute-qos.md
   - name: Om att flytta kretsar från klassisk till Resource Manager
     href: expressroute-move.md
+  - name: Om ExpressRoute Direct
+    href: expressroute-erdirect-about.md
 - name: Instruktionsguider
   items:
   - name: Skapa och ändra en krets
@@ -68,6 +70,8 @@ items:
       href: expressroute-howto-linkvnet-arm.md
     - name: Azure CLI
       href: howto-linkvnet-cli.md
+  - name: Länka ExpressRoute-kretsar för att aktivera Global Reach
+    href: expressroute-global-reach.md
   - name: Konfigurera ett virtuellt privat nätverk för plats-till-plats via Microsoft-peering
     href: site-to-site-vpn-over-microsoft-peering.md
   - name: Konfigurera en virtuell nätverksgateway för ExpressRoute
@@ -78,6 +82,8 @@ items:
       href: expressroute-howto-add-gateway-resource-manager.md
   - name: Konfigurera ExpressRoute-anslutningar och anslutningar för plats-till-plats som kan användas samtidigt
     href: expressroute-howto-coexist-resource-manager.md
+  - name: Konfigurera ExpressRoute Direct
+    href: expressroute-howto-erdirect.md
   - name: Konfigurera routningsfilter för Microsoft-peering
     items:
     - name: Azure Portal
@@ -102,8 +108,12 @@ items:
       href: expressroute-config-samples-routing.md
     - name: Exempel på routerkonfigurationer för NAT
       href: expressroute-config-samples-nat.md
-  - name: Konfigurera övervakare av nätverksprestanda för ExpressRoute
-    href: how-to-npm.md
+  - name: Övervakning
+    items:
+    - name: Övervakning, mått och aviseringar i ExpressRoute
+      href: expressroute-monitoring-metrics-alerts.md
+    - name: Konfigurera övervakare av nätverksprestanda för ExpressRoute
+      href: how-to-npm.md
   - name: Artiklar om den klassiska distributionsmodellen
     items:
     - name: Ändra en krets
@@ -191,9 +201,9 @@ items:
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-microsoft-peering-for-your-expressroute-circuit/
     - name: Konfigurera offentlig peering för din krets
       href: https://azure.microsoft.com/documentation/videos/azure-expressroute-how-to-set-up-azure-public-peering-for-your-expressroute-circuit/
-ms.openlocfilehash: 3353f2399d258ad8fcba4ea3cae6ff2d7db42271
-ms.sourcegitcommit: 8ebcecb837bbfb989728e4667d74e42f7a3a9352
+ms.openlocfilehash: effc8fc979bf516838418bd3b3805d791d8f3e68
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/21/2018
-ms.locfileid: "41927112"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46989115"
