--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -7,19 +7,29 @@ items:
     href: overview.md
 - name: Självstudier
   items:
-  - name: 1. Distribuera och konfigurera
+  - name: Distribuera och konfigurera
     href: tutorial-firewall-deploy-portal.md
-  - name: 2. Övervaka diagnostikloggar
+  - name: Distribuera i hybridnätverk
+    href: tutorial-hybrid-ps.md
+  - name: Filtrera inkommande trafik med DNAT
+    href: tutorial-firewall-dnat.md
+  - name: Övervaka diagnostikloggar
     href: tutorial-diagnostics.md
   expanded: true
 - name: Exempel
   items:
   - name: Azure PowerShell
     href: sample-powershell.md
+- name: Begrepp
+  items:
+  - name: FQDN-taggar
+    href: fqdn-tags.md
+  - name: Infrastruktur-FQDN
+    href: infrastructure-fqdns.md
+  - name: Loggar och mått
+    href: logs-and-metrics.md
 - name: Instruktionsguider
   items:
-  - name: Registrera dig för förhandsversion
-    href: public-preview.md
   - name: Distribuera med hjälp av en mall
     href: deploy-template.md
 - name: Referens
@@ -51,12 +61,12 @@ items:
   - name: Community-mallar
     href: https://azure.microsoft.com/documentation/templates
   - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/#Linux
+    href: https://azure.microsoft.com/en-us/pricing/details/azure-firewall/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 5b4ec962353e1d948725839dfd3b7ef72f883ee1
-ms.sourcegitcommit: 4ea0cea46d8b607acd7d128e1fd4a23454aa43ee
+ms.openlocfilehash: 07a7f323a5557a95635cf50da447f2d8215cdec0
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/15/2018
-ms.locfileid: "41927275"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46990798"
