--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -69,18 +69,21 @@ items:
     - name: Skicka och ta emot meddelanden
       href: iot-hub-devguide-messaging.md
       items:
-      - name: Skicka meddelanden från enhet till moln till IoT Hub
+      - name: Använda meddelanderoutning för att skicka meddelanden från enhet till moln
         href: iot-hub-devguide-messages-d2c.md
-      - name: Läsa meddelanden från enhet till moln från den inbyggda slutpunkten
-        href: iot-hub-devguide-messages-read-builtin.md
+        items:
+        - name: Skapa och läsa IoT Hub-meddelanden
+          href: iot-hub-devguide-messages-construct.md
+        - name: Läsa meddelanden från enhet till moln från den inbyggda slutpunkten
+          href: iot-hub-devguide-messages-read-builtin.md
+        - name: Använda anpassade slutpunkter och routningsregler för meddelanden från enhet till moln
+          href: iot-hub-devguide-messages-read-custom.md
+        - name: Lägga till frågor i meddelandevägar
+          href: iot-hub-devguide-routing-query-syntax.md
       - name: Reagera på IoT Hub-händelser
         href: iot-hub-event-grid.md
-      - name: Använda anpassade slutpunkter och routningsregler för meddelanden från enhet till moln
-        href: iot-hub-devguide-messages-read-custom.md
       - name: Skicka meddelanden från moln till enhet från IoT Hub
         href: iot-hub-devguide-messages-c2d.md
-      - name: Skapa och läsa IoT Hub-meddelanden
-        href: iot-hub-devguide-messages-construct.md
       - name: Välja ett kommunikationsprotokoll
         href: iot-hub-devguide-protocols.md
     - name: Ladda upp filer från en enhet
@@ -305,8 +308,6 @@ items:
       items:
       - name: Hantera meddelanden mellan enheter och molnet med Azure IoT Toolkit för VS Code
         href: iot-hub-vscode-iot-toolkit-cloud-device-messaging.md
-      - name: Spara IoT Hub-meddelanden i Azure Blob Storage
-        href: iot-hub-store-data-in-azure-table-storage.md
       - name: Datavisualisering i Power BI
         href: iot-hub-live-data-visualization-in-power-bi.md
       - name: Datavisualisering med Web Apps
@@ -315,7 +316,7 @@ items:
         href: iot-hub-weather-forecast-machine-learning.md
       - name: Enhetshantering med Azure IoT Toolkit för VS Code
         href: iot-hub-device-management-iot-toolkit.md
-      - name: Enhetshantering med IoT-tillägg för Azure CLI 2.0
+      - name: Enhetshantering med IoT-tillägg för Azure CLI
         href: iot-hub-device-management-iot-extension-azure-cli-2-0.md
       - name: Fjärrövervakning och aviseringar med Logic Apps
         href: iot-hub-monitoring-notifications-with-azure-logic-apps.md
@@ -419,9 +420,9 @@ items:
     href: https://microsoft.github.io/techcasestudies/#technology=IoT&sortBy=featured
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=iot-hub
-ms.openlocfilehash: 20d59ad7f529c8c191a8149272a851f46684561e
-ms.sourcegitcommit: ab9514485569ce511f2a93260ef71c56d7633343
+ms.openlocfilehash: 57ffc64e9c644e27f24ada67366f820708860660
+ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/15/2018
-ms.locfileid: "45629932"
+ms.lasthandoff: 09/25/2018
+ms.locfileid: "47064157"
