--- a/articles/key-vault/index.yml
+++ b/articles/key-vault/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: b797090b98d7ab552c3c342eeea341fd86c331c3
-ms.sourcegitcommit: f057c10ae4f26a768e97f2cb3f3faca9ed23ff1b
+ms.openlocfilehash: b84be8ce441796d82411ebd56e31d93062bccdcc
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/17/2018
-ms.locfileid: "41929675"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46959724"
 documentType: LandingData
 title: Dokumentation om Key Vault
 metadata:
@@ -73,6 +73,19 @@ sections:
       image:
         src: media/index/get-started.svg
         href: /azure/key-vault/key-vault-use-from-web-application
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Hantera hemligheter i dina serverappar med Azure Key Vault
+      href: /learn/modules/manage-secrets-with-azure-key-vault/
+      image:
+        src: /learn/achievements/manage-secrets-with-azure-key-vault.svg
+        href: /learn/modules/manage-secrets-with-azure-key-vault/
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-key-vault">Mer interaktiv inlärning...</a>
 - title: Referens
   items:
   - type: list
