--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 764306a9e47395c64116e43af35a0c3a91ec60e5
-ms.sourcegitcommit: ebd06cee3e78674ba9e6764ddc889fc5948060c4
+ms.openlocfilehash: e6fa637198c4c5eef00c35c3d58a008c5b52445b
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/07/2018
-ms.locfileid: "44049118"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46989200"
 documentType: LandingData
 title: Lastbalanserare
 metadata:
@@ -54,6 +54,19 @@ sections:
     - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zone-redundant-portal">Belastningsutjämna virtuella datorer mellan tillgänglighetszoner</a>
     - html: <a href="/azure/load-balancer/tutorial-load-balancer-standard-public-zonal-portal">Belastningsutjämna virtuella datorer i en specifik tillgänglighetszon</a>
     - html: <a href="/azure/load-balancer/tutorial-load-balancer-port-forwarding-portal">Konfigurera portvidarebefordran i Load Balancer</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Skapa hög tillgänglighet för dina virtuella datorer
+      href: /learn/modules/make-your-virtual-machines-highly-available/
+      image:
+        src: /learn/achievements/make-your-virtual-machines-highly-available.svg
+        href: /learn/modules/make-your-virtual-machines-highly-available/
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-virtual-machines">Mer interaktiv inlärning...</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
