--- a/articles/machine-learning/data-science-virtual-machine/index.yml
+++ b/articles/machine-learning/data-science-virtual-machine/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: fd2a030d3529857b5a68aeaf28494e76d416e6fd
-ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
+ms.openlocfilehash: e96c2d6770f082a3c2f4027e69a8d7a254162dd6
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43781047"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46949238"
 documentType: LandingData
 title: Dokumentation om virtuella Azure-datorer för datavetenskap
 metadata:
@@ -53,7 +53,7 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Azure Machine Learning-tjänster (förhandsgranskning)
+    - title: Azure Machine Learning-tjänst (förhandsversion)
       href: /azure/machine-learning/service/
       image:
         src: media/index/i_machine-learning.svg
