--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bd9988925b3c9a253d8c7e4632fea303a070fe38
-ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
+ms.openlocfilehash: d7c8e534095da9144cb72c11a162af93699eb013
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43782871"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46957939"
 documentType: LandingData
 title: Dokumentation om Azure Machine Learning Studio
 metadata:
@@ -18,11 +18,21 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 01/18/2018
+  ms.date: 09/24/2018
   ms.author: jmartens
 abstract:
   description: Azure Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsB
+    columns: 1
+    items:
+    - html: <p>Börja skapa och distribuera modeller i Studios dra och släpp-gränssnitt.</p>
+      image:
+        src: /azure/machine-learning/media/index/machine-learning-studio.svg
+      title: Azure Machine Learning Studio
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
@@ -51,7 +61,7 @@ sections:
     style: cards
     className: cardsFTitle
     items:
-    - title: Azure Machine Learning-tjänster (förhandsgranskning)
+    - title: Azure Machine Learning-tjänst (förhandsversion)
       href: /azure/machine-learning/service/
       image:
         src: media/index/i_machine-learning.svg
