--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: aab2881462eafdc00bb0f3329f68789f07225773
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46955837"
 documentType: LandingData
 title: Azure Database för MySQL-dokumentation
 metadata:
@@ -14,19 +20,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/13/2017
   ms.author: carolz
-  ms.openlocfilehash: 817fc211b6296490af0a873a88eb76215b44c2dd
-  ms.sourcegitcommit: 6699c77dcbd5f8a1a2f21fba3d0a0005ac9ed6b7
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 10/11/2017
-  ms.locfileid: "23070811"
 abstract:
   description: Azure Database för MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database för MySQL och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig hur du skapar en MySQL-databas på Azure med hjälp av:'
+    text: 'Lär dig hur du skapar MySQL Database on Azure med hjälp av:'
   - type: list
     style: icon48
     items:
@@ -46,7 +46,7 @@ sections:
     style: ordered
     items:
     - html: Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
-    - html: Skapa en webbapp &#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>
+    - html: 'Skapa en webbapp & #58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>'
 - title: Referens
   items:
   - type: list
