--- a/articles/service-bus-messaging/index.yml
+++ b/articles/service-bus-messaging/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 00484fd11d1bf7a25b5e6cd8029366794e44c16c
-ms.sourcegitcommit: cb61439cf0ae2a3f4b07a98da4df258bfb479845
+ms.openlocfilehash: a798b64e0b6b8b90ce902d99b779f31e6558f90e
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43695303"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46947405"
 documentType: LandingData
 title: Dokumentation om Azure Service Bus-meddelanden
 metadata:
@@ -61,6 +61,18 @@ sections:
     - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-cli">Använda ämnen och prenumerationer för att uppdatera inventering med Azure CLI</a>
     - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-portal">Använda ämnen och prenumerationer för att uppdatera inventering med Azure Portal</a>
     - html: <a href="/azure/service-bus-messaging/service-bus-tutorial-topics-subscriptions-powershell">Använda ämnen och prenumerationer för att uppdatera inventering med Azure PowerShell</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Implementera arbetsflöden för meddelandebaserad kommunikation med Azure Service Bus
+      href: /learn/modules/implement-message-workflows-with-service-bus/
+      image:
+        src: /learn/achievements/implement-message-workflows-with-service-bus.svg
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-service-bus">Mer interaktiv inlärning...</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
