--- a/articles/sql-database/index.yml
+++ b/articles/sql-database/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 0e1c246a0132c53656cb0b993b870677698fe65f
-ms.sourcegitcommit: 1b561b77aa080416b094b6f41fce5b6a4721e7d5
+ms.openlocfilehash: 89399d59504328d40c08b9926b4ddb3fad3f8530
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/17/2018
-ms.locfileid: "45732897"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46978768"
 documentType: LandingData
 title: Dokumentation om Azure SQL Database
 metadata:
@@ -155,6 +155,19 @@ sections:
     - html: Migrera en befintlig databas till Azure med hjälp av <a href="/azure/sql-database/sql-database-managed-instance-get-started-restore">Database RESTORE</a>, <a href="/azure/sql-database/sql-database-migrate-your-sql-server-database">Database Migration Assistant</a> eller <a href="/azure/sql-database/sql-database-import">BACPAC-import</a>
     - html: <a href="/azure/sql-database/sql-database-security-tutorial">Skydda din SQL-databas</a>
     - html: Distribuera dina data globalt med en <a href="/azure/sql-database/sql-database-implement-geo-distributed-database">geo-distribuerad databas</a>
+- title: Utveckla dina färdigheter med Microsoft Learn
+  items:
+  - type: list
+    style: cards
+    className: cardsFTitle
+    items:
+    - title: Etablera en Azure SQL-databas för att lagra programdata
+      href: /learn/modules/provision-azure-sql-db/
+      image:
+        src: /learn/achievements/provision-azure-sql-db.svg
+        href: /learn/modules/provision-azure-sql-db/
+  - type: paragraph
+    text: <a href="/learn/browse/?products=azure-sql-database">Mer interaktiv inlärning...</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
