--- a/articles/stream-analytics/index.yml
+++ b/articles/stream-analytics/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 59274dd042c136770d0f4bab5ab69854dbfb3896
-ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
+ms.openlocfilehash: f4f0c3e21f755dbf431be72ebf7568155ab1bc89
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43663775"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46949442"
 documentType: LandingData
 title: Stream Analytics-dokumentation
 metadata:
@@ -58,6 +58,8 @@ sections:
     - html: <a href="stream-analytics-manage-job">Skapa ett Stream Analytics-jobb för att analysera telefonsamtalsdata och visualisera resultat i en Power BI-instrumentpanel</a>
     - html: <a href="stream-analytics-with-azure-functions">Köra Azure Functions från Azure Stream Analytics-jobb</a>
     - html: <a href="stream-analytics-javascript-user-defined-functions">Köra användardefinierade funktioner i Azure Stream Analytics JavaScript-jobb</a>
+    - html: <a href="stream-analytics-tools-visual-studio-cicd-vsts">Distribuera ett Azure Stream Analytics-jobb med CI/CD med hjälp av Azure Pipelines</a>
+    - html: <a href="stream-analytics-edge-csharp-udf">Skriva en C#-användardefinierad funktion för ett Azure Stream Analytics Edge-jobb (förhandsversion)</a>
 - title: Referens
   items:
   - type: list
