--- a/articles/traffic-manager/index.yml
+++ b/articles/traffic-manager/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 36685dccbe55a5c138566980e1c6da1962a6f35d
-ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
+ms.openlocfilehash: 0366a92030d63986a5a2229594ecf30c744e0925
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43781972"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46957626"
 documentType: LandingData
 title: Traffic Manager
 metadata:
@@ -46,6 +46,7 @@ sections:
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-performance-routing-method">Dirigera trafik för låg latens</a>
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-weighted-routing-method">Distribuera trafik till en uppsättning slutpunkter</a>
     - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik till en slutpunkt för prioritet</a>
+    - html: <a href="/azure/traffic-manager/traffic-manager-configure-priority-routing-method">Dirigera trafik utifrån användarens undernät</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
