--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -33,6 +33,8 @@ items:
     href: point-to-site-about.md
   - name: Om VPN-routning från punkt till plats
     href: vpn-gateway-about-point-to-site-routing.md
+  - name: Om zonredundanta gatewayer för tillgänglighetszoner
+    href: about-zone-redundant-vnet-gateways.md
 - name: Instruktionsguider
   items:
   - name: Konfigurera plats-till-plats-anslutningar
@@ -77,6 +79,12 @@ items:
       href: point-to-site-vpn-client-configuration-radius.md
     - name: Integrera P2S VPN RADIUS-autentisering med NPS-server
       href: vpn-gateway-radiuis-mfa-nsp.md
+  - name: Konfigurera OpenVPN
+    items:
+    - name: Konfigurera OpenVPN för punkt-till-plats-anslutningar
+      href: vpn-gateway-howto-openvpn.md
+    - name: Konfigurera OpenVPN-klienter
+      href: vpn-gateway-howto-openvpn-clients.md
   - name: Konfigurera anslutningar mellan virtuella nätverk
     items:
     - name: Azure Portal
@@ -234,9 +242,9 @@ items:
     href: https://azure.microsoft.com/support/legal/sla
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=vpn-gateway
-ms.openlocfilehash: 130a20a5ce01b9be1b47050f11cbcea8e354b0a6
-ms.sourcegitcommit: f3bd5c17a3a189f144008faf1acb9fabc5bc9ab7
+ms.openlocfilehash: 9d5ece68343d498992a80b46210d03634b63544d
+ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/10/2018
-ms.locfileid: "44299329"
+ms.lasthandoff: 09/24/2018
+ms.locfileid: "46971475"
